Saving safari fix: grain outline render failing due to blurry segmentation map rendering

--- a/index.css
+++ b/index.css
@@ -1054,8 +1054,9 @@ a:hover {
 }
 
 .footer-logo {
-    height: 32px;
-    width: min-content;
+    /* height: 32px; */
+    /* width: min-content; */
+    width:48px;
     opacity: 0.9;
     cursor: default;
     margin-bottom: 8px;
